--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm ci
 
       - name: Unit Tests
-        run: npm test
+        run: npm run test:unit
 
       - name: Build project
         run: npm run build
