Update jekyll-gh-pages.yml to clean install dependencies before running test

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Dependencies
+        run: npm ci  # This will install vitest along with all other dependencies
+
         # Run unit tests before building
       - name: Run Tests
         run: npm run test:unit
